# custom-processor-node-example

./: app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/anonymous/rnaudioapiturbomodules/: MainActivity.kt  MainApplication.kt
android/app/src/main/jni/: CMakeLists.txt  OnLoad.cpp
android/app/src/main/res/values/: strings.xml
app/(tabs)/: AudioPlayer.ts  index.tsx  types.d.ts  types.ts
app/components/: index.ts
ios/: NativeAudioProcessingModuleProvider.h  NativeAudioProcessingModuleProvider.mm  Podfile
ios/rnaudioapiturbomodules/: Info.plist
ios/rnaudioapiturbomodules.xcodeproj/: project.pbxproj
ios/rnaudioapiturbomodules.xcodeproj/xcshareddata/xcschemes/: rnaudioapiturbomodules.xcscheme
ios/rnaudioapiturbomodules.xcworkspace/: contents.xcworkspacedata
ios/shared/: CustomProcessorNodeHostObject.h  MyProcessorNode.cpp  MyProcessorNode.h  MyProcessorNodeHostObject.h  NativeAudioProcessingModule.cpp  NativeAudioProcessingModule.h
shared/: CustomProcessorNodeHostObject.h  MyProcessorNode.cpp  MyProcessorNode.h  MyProcessorNodeHostObject.cpp  MyProcessorNodeHostObject.h  NativeAudioProcessingModule.cpp  NativeAudioProcessingModule.h
